--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -66,6 +66,11 @@
   &mdash; <a href = "https://en.wikipedia.org/wiki/Ludwig_Wittgenstein">Ludwig Wittgenstein</a>
 </blockquote>
 
+<blockquote>
+  "Bears eat beets."
+  &mdash; <a href = "https://en.wikipedia.org/wiki/Dwight_Shrute">Dwight Shrute</a>
+</blockquote>
+
 <br><br><hr>
 
 <a href = "w0.html">previous</a> |
