--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -48,6 +48,15 @@
     <a href = "view-source:http://bardcollege.github.io/workshop1/w2.html">code</a> |
     <a href = "w3.html">next</a>  
     
+    <h3>DECODING LANGUAGE: <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&sqi=2&ved=0ahUKEwjd_9iq4MPOAhXEKh4KHSYaBLIQFggmMAA&url=http%3A%2F%2Fwww.programmingbasics.org%2F&usg=AFQjCNHziSHriTO5dtyq2ddtUtiYm6SZfQ&bvm=bv.129422649,d.dmo&cad=rja">Basics Of Coding</a></h3>
+
+    <ul>
+      <li>I Don't Really Know How To Code Tho:
+        <ul>
+          <li><a href="https://msdn.microsoft.com/en-us/library/ms172579(v=vs.90).aspx">Something I dont Know</a></li>
+          <li><a href="http://lifehacker.com/5867110/learn-the-basics-of-coding">More stuff I dont know</a> </li>
+          <li><a href ="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjhvKv84MPOAhWCuB4KHWYNBNQQjB0IBg&url=http%3A%2F%2Fdisneyblank.tumblr.com%2F&bvm=bv.129422649,d.dmo&psig=AFQjCNHjLhTMlciSSeX0CbAnmCMFB9tPTA&ust=1471362065865162">Stuff I do know</a></li>
+    
   </body>
   
 </html>
